feat: upd style.css

--- a/style.css
+++ b/style.css
@@ -147,3 +147,10 @@ li a:hover {
 .copy a:hover {
   text-decoration: underline;
 }
+body {
+  margin: 0;
+  padding: 0;
+}
+.rss {
+  width: 150px;
+}
